# advent-of-code

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
2018/: 2018.h  CMakeLists.txt  day_01.cpp  day_01.h
Run/: CMakeLists.txt  run.cpp  run.h
Utilities/: CMakeLists.txt  basic_window.cpp  basic_window.h  reader.cpp  reader.h  reader.hpp  test.cpp  utils.hpp  vec2.h  vec3.h  visualiser.h
Y_2018/: CMakeLists.txt  d_01.cpp  d_01.h  d_02.h  d_03.h  default.h  y_2018.cpp
Y_2019/: CMakeLists.txt  IntCodeComputer.cpp  IntCodeComputer.h  d_01.h  d_02.h  d_03.h  d_04.h  d_05.h  d_06.h  d_07.h  d_08.h  d_09.h  d_10.h  d_11.h  d_12.h  d_13.h  d_14.h  d_15.h  d_16.h  d_17.h  d_18.h  d_19.h  d_20.h  d_21.h  d_22.h  d_xx.h  default.h  y_2019.cpp
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/Utilities/: mat2x2.h  utils.hpp
src/Y_2018/: CMakeLists.txt  d_01.h  d_02.h  d_03.h  default.h  y_2018.h
src/Y_2019/: CMakeLists.txt  d_03.h  d_04.h  d_05.h  d_07.h  d_10.h  d_11.h  d_12.h  d_13.h  d_14.h  d_16.h  d_19.h  d_20.h  d_22.h  d_23.h  d_xx.h  default.h  y_2019.h
src/run/: CMakeLists.txt  Main.cpp  run.cpp
src/run/inputs/: y2020d01.in
src/solution/: CMakeLists.txt  Solution.hpp
src/solutions/: CMakeLists.txt
src/solutions/y2018/: CMakeLists.txt  RegisteredSolutions.hpp  d01.hpp  d02.hpp  d03.hpp
src/solutions/y2019/: CMakeLists.txt  IntCodeComputer.cpp  IntCodeComputer.hpp  RegisteredSolutions.hpp  d01.hpp  d02.hpp  d03.hpp  d04.hpp  d05.hpp  d21.hpp  d_01.h  d_04.h  d_06.h  d_07.h  d_08.h  d_12.h  d_18.h  d_20.h  d_xx.h  default.h  y_2019.cpp
src/solutions/y2020/: CMakeLists.txt  RegisteredSolutions.hpp  cudautils.cuh  d01.cu  d01.hpp  d02.cu  d03.cu  d04.cu  notes.cu
src/utilities/: BasicWindow.cpp  BasicWindow.h  CMakeLists.txt  Common.hpp  IterUtils.hpp  Mat2x2.h  Reader.cpp  Reader.h  Solution.cpp  Timer.hpp  Vec2.h  Vec3.h  basic_window.cpp  basic_window.h  vec2.h
src/y2020/: CMakeLists.txt  RegisteredSolutions.hpp  d01.hpp
